--- a/style.css
+++ b/style.css
@@ -3,179 +3,291 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-    display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 body {
-    line-height: 1;
+  line-height: 1;
 }
-ol, ul {
-    list-style: none;
+ol,
+ul {
+  list-style: none;
 }
-blockquote, q {
-    quotes: none;
+blockquote,
+q {
+  quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
-
 
 /* Suwit Jawa 2.0 */
 
 body {
-    background-image: url(img/bg2.png);
-    font-family: arial;
+  background-image: url(img/bg2.png);
+  font-family: arial;
 }
+
 h1 {
-    font-size: 60px;
-    font-weight: bold;
-    text-align: center;
-    margin: 10px 0;
-    margin-top: 30px;
-    text-transform: uppercase;
-    color: white;
-    text-shadow: 1.5px 1.5px 0 #333, 0px 1.5px 0 #333, -1.5px -1.5px 0 #333, -1.5px -1.5px 0 #333, -1.5px 1.5px 0 #333, 1.5px -1.5px 0 #333, 0.7778174593px 0.7778174593px 0 #aaaaaa, 1.5556349186px 1.5556349186px 0 #aaaaaa, 2.3334523779px 2.3334523779px 0 #aaaaaa, 3.1112698372px 3.1112698372px 0 #aaaaaa, 3.8890872965px 3.8890872965px 0 #aaaaaa, 4.6669047558px 4.6669047558px 0 #aaaaaa, 5.4447222151px 5.4447222151px 0 #aaaaaa, 6.2225396744px 6.2225396744px 0 #aaaaaa, 7.0003571337px 7.0003571337px 0 #aaaaaa, 7.7781745931px 7.7781745931px 0 #aaaaaa;
+  font-size: 60px;
+  width: 100%;
+  font-weight: bold;
+  text-align: center;
+  margin: 10px 0;
+  margin-top: 30px;
+  text-transform: uppercase;
+  color: white;
+  text-shadow: 1.5px 1.5px 0 #333, 0px 1.5px 0 #333, -1.5px -1.5px 0 #333,
+    -1.5px -1.5px 0 #333, -1.5px 1.5px 0 #333, 1.5px -1.5px 0 #333,
+    0.7778174593px 0.7778174593px 0 #aaaaaa,
+    1.5556349186px 1.5556349186px 0 #aaaaaa,
+    2.3334523779px 2.3334523779px 0 #aaaaaa,
+    3.1112698372px 3.1112698372px 0 #aaaaaa,
+    3.8890872965px 3.8890872965px 0 #aaaaaa,
+    4.6669047558px 4.6669047558px 0 #aaaaaa,
+    5.4447222151px 5.4447222151px 0 #aaaaaa,
+    6.2225396744px 6.2225396744px 0 #aaaaaa,
+    7.0003571337px 7.0003571337px 0 #aaaaaa,
+    7.7781745931px 7.7781745931px 0 #aaaaaa;
 }
 
 .area-komputer h2 {
-    color: blue; 
-    text-shadow: 3px 3px white;
-    font-family: 'Open Sans', sans-serif; 
-    font-size: 40px; 
-    font-weight: 400; 
-    line-height: 32px;
-    margin-left: 20px;
+  color: blue;
+  text-shadow: 3px 3px white;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 32px;
+  margin-left: 20px;
 }
 
 .area-player h2 {
-    color: yellow; 
-    text-shadow: 3px 3px black;
-    font-family: 'Open Sans', sans-serif; 
-    font-size: 40px; 
-    font-weight: 400; 
-    line-height: 32px;
-    margin-left: 20px;
+  color: yellow;
+  text-shadow: 3px 3px black;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 32px;
+  margin-left: 20px;
 }
 
 .computer-score {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 .player-score {
-    margin-top: 5px;
+  margin-top: 5px;
 }
 
 .container {
-    width: 600px;
-    margin: auto;
-    padding: 20px;
-    position: relative;
+  width: 600px;
+  margin: auto;
+  padding: 20px;
+  position: relative;
 }
 
 .area-komputer {
-    width: 560px;
-    height: 300px;
-    margin: 5px auto;
-    background-color: lightblue;
-    background: linear-gradient(to bottom, rgb(239, 241, 79) 0%, rgb(224, 253, 56) 100%);
-    position: relative;
-    padding-top: 20px;
-    box-sizing: border-box;
-    border-radius: 40px 40px 0 0;
+  width: 560px;
+  height: 300px;
+  margin: 5px auto;
+  background-color: lightblue;
+  background: linear-gradient(
+    to bottom,
+    rgb(239, 241, 79) 0%,
+    rgb(224, 253, 56) 100%
+  );
+  position: relative;
+  padding-top: 20px;
+  box-sizing: border-box;
+  border-radius: 40px 40px 0 0;
 }
 
 .img-computer {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .area-player {
-    width: 560px;
-    height: 300px;
-    margin: 5px auto;
-    background-color: lightgreen;
-    background: linear-gradient(to bottom, rgb(69, 199, 255) 0%, rgb(99, 219, 255) 100%);
-    position: relative;
-    padding-top: 20px;
-    border-radius: 0 0 40px 40px;
+  width: 560px;
+  height: 300px;
+  margin: 5px auto;
+  background-color: lightgreen;
+  background: linear-gradient(
+    to bottom,
+    rgb(69, 199, 255) 0%,
+    rgb(99, 219, 255) 100%
+  );
+  position: relative;
+  padding-top: 20px;
+  border-radius: 0 0 40px 40px;
 }
 
 .info {
-    width: 170px;
-    height: 60px;
-    border: 5px solid salmon;
-    position: absolute;
-    left: 50%;
-    margin-left: -95px;
-    top: 50%;
-    margin-top: -30px;
-    background-color: white;
-    border-radius: 30px;
-    z-index: 1;
-    text-align: center;
-    line-height: 60px;
-    color: #f89bb4;
-    font-size: 25px;
-    text-shadow: 1px 1px 1px rgba(0,0,0,.3);
+  width: 170px;
+  height: 60px;
+  border: 5px solid salmon;
+  position: absolute;
+  left: 50%;
+  margin-left: -95px;
+  top: 50%;
+  margin-top: -30px;
+  background-color: white;
+  border-radius: 30px;
+  z-index: 1;
+  text-align: center;
+  line-height: 60px;
+  color: #f89bb4;
+  font-size: 25px;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
 ul {
-    padding-top: 80px;
-    padding-left: 25px;
+  padding-top: 80px;
+  padding-left: 25px;
 }
 
 li {
-    display: inline-block;
-    margin: -20px 18px;
+  display: inline-block;
+  margin: -20px 18px;
 }
 
 img {
-    width: 130px;
-    height: 130px;
-    display: block;
-    margin: auto;
-    border-radius: 50%;
+  width: 130px;
+  height: 130px;
+  display: block;
+  margin: auto;
+  border-radius: 50%;
 }
 
 .rock .paper .scissors {
-    transition: .3s;
-    position: relative;
-    top:0;
-    cursor: pointer;
+  transition: 0.3s;
+  position: relative;
+  top: 0;
+  cursor: pointer;
 }
 
-.rock:hover, .paper:hover, .scissors:hover, .active {
-    box-shadow: 0 0 10px 5px limegreen;
-    cursor: pointer;
+.rock:hover,
+.paper:hover,
+.scissors:hover,
+.active {
+  box-shadow: 0 0 10px 5px limegreen;
+  cursor: pointer;
 }
 
-.rock:active, .paper:active, .scissors:active {
-    top: 2px;
+.rock:active,
+.paper:active,
+.scissors:active {
+  top: 2px;
+}
+
+@media only screen and (max-width: 768px) {
+  h1 {
+    margin-left: 40%;
+  }
 }
