--- a/style.css
+++ b/style.css
@@ -137,10 +137,9 @@ body {
 
 h1 {
   font-size: 60px;
-  width: 100%;
+  width: 80%;
   font-weight: bold;
   text-align: center;
-  margin: 10px 0;
   margin-top: 30px;
   text-transform: uppercase;
   color: white;
@@ -288,6 +287,9 @@ img {
 
 @media only screen and (max-width: 768px) {
   h1 {
-    margin-left: 40%;
+    top: 50%; /* IMPORTANT */
+    left: 50%; /* IMPORTANT */
+    display: block;
+    position: relative;
   }
 }
