--- a/style.css
+++ b/style.css
@@ -128,10 +128,10 @@ table {
   border-spacing: 0;
 }
 
-/* Suwit Jawa 2.0 */
 
 body {
-  background-image: url(img/bg2.png);
+  background-image: url(img/bg4.jpg);
+  background-size: cover;
   font-family: arial;
 }
 
@@ -159,30 +159,50 @@ h1 {
 
 .container {
   width: 600px;
-  height: 100%;
+  /* height: 100%;
   margin: auto;
   padding: 20px;
-  position: relative;
+  position: relative; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.area-komputer h2 {
-  color: blue;
-  text-shadow: 3px 3px white;
+/* .box-con {
+  margin: auto;
+}
+
+.box {
+  float: left;
+  width: 800px;
+  height: 600px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 6px;
+  backdrop-filter: blur(8px);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  font-size: 48px;
+  color: #fff;
+  font-family: "Arial";
+} */
+
+.area h2 {
+  color: rgb(255, 255, 255);
+  /* text-shadow: 3px 3px white; */
   font-family: 'Open Sans', sans-serif;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: 400;
   line-height: 32px;
   margin-left: 20px;
-}
-
-.area-player h2 {
-  color: yellow;
-  text-shadow: 3px 3px black;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 40px;
-  font-weight: 400;
-  line-height: 32px;
-  margin-left: 20px;
+  
 }
 
 .computer-score {
@@ -197,16 +217,20 @@ h1 {
   width: 560px;
   height: 300px;
   margin: 5px auto;
-  background-color: lightblue;
-  background: linear-gradient(
+  background-color: #611447;
+  /* background: linear-gradient(
     to bottom,
     rgb(239, 241, 79) 0%,
     rgb(224, 253, 56) 100%
-  );
+  ); */
   position: relative;
   padding-top: 20px;
   box-sizing: border-box;
   border-radius: 40px 40px 0 0;
+  /* background: rgba(255, 255, 255, 0.1);
+  border-radius: 6px;
+  backdrop-filter: blur(8px);
+  border: 1px solid rgba(255, 255, 255, 0.1); */
 }
 
 .img-computer {
@@ -216,22 +240,26 @@ h1 {
 .area-player {
   width: 560px;
   height: 300px;
-  margin: 5px auto;
-  background-color: lightgreen;
-  background: linear-gradient(
+  /* margin: 5px auto; */
+  background-color: #e36905;
+  /* background: linear-gradient(
     to bottom,
     rgb(69, 199, 255) 0%,
     rgb(99, 219, 255) 100%
-  );
+  ); */ 
   position: relative;
   padding-top: 20px;
   border-radius: 0 0 40px 40px;
+  /* background: rgba(255, 255, 255, 0.1);
+  border-radius: 6px;
+  backdrop-filter: blur(8px);
+  border: 1px solid rgba(255, 255, 255, 0.1); */
 }
 
 .info {
   width: 170px;
   height: 60px;
-  border: 5px solid salmon;
+  border: 5px solid rgb(255, 255, 255);
   position: absolute;
   left: 50%;
   margin-left: -95px;
@@ -242,9 +270,13 @@ h1 {
   z-index: 1;
   text-align: center;
   line-height: 60px;
-  color: #f89bb4;
+  color: #611447;
   font-size: 25px;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  /* background: rgba(255, 255, 255, 0.1);
+  border-radius: 6px;
+  backdrop-filter: blur(8px);
+  border: 1px solid rgba(255, 255, 255, 0.1); */
 }
 
 ul {
@@ -276,7 +308,7 @@ img {
 .paper:hover,
 .scissors:hover,
 .active {
-  box-shadow: 0 0 10px 5px limegreen;
+  box-shadow: 0 0 10px 5px rgb(255, 255, 255);
   cursor: pointer;
 }
 
